# research-data-discovery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config-template.json  data-dictionary.csv  dataset-records-retrieval.ipynb  dataset-records-retrieval.py  env-template.json  env.json  journal-list.json  main.py  output-dictionary.csv  pyproject.toml  utils.py
accessory-data/: 20250310-mediated-figshare-metadata-summary.csv
accessory-scripts/: crossref-query.py  datacite-figshare-partner-query.py  datacite-figshare-partner-query_metadata-only.py  datacite-ror-query.py  dataset-records-retrieval-visualization.py  dryad-date-comparison.py  figshare-deposits-additional-metadata.py  figshare-deposits-linked-articles.py  figshare-plos-osi-search.py  plos-osi-search.py  plos-webscraping-supp-info.py  preprint-rads-dataset-reanalysis.py
accessory-scripts/deprecated/: preprint-dryad-date-comparison.py
